EMBCDFA # 1274 - Fixed the DFA UI issues - Fixed the atachment component padding - Fixed the dialog titile on the secondary applicant - Fixed the mat-card padding on clean up logs, damaged items, Occupants - Fixed spacing on damaged property address, Property damage  pre screening components. - Fixed the edit and cancel button background color

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
@@ -100,7 +100,7 @@
                 + Add Room & Items
               </button>
 
-              <mat-card appearance="outlined" *ngIf="showDamagedRoomForm">
+              <mat-card appearance="outlined" *ngIf="showDamagedRoomForm" style="padding: 12px;">
                 <p class="sub-heading" style="font-size: 15px">
                   New room and items
                 </p>
