--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
@@ -304,7 +304,7 @@
                 + Add secondary applicant
               </button>
 
-              <mat-card appearance="outlined" *ngIf="showSecondaryApplicantForm">
+              <mat-card appearance="outlined" *ngIf="showSecondaryApplicantForm" style="padding: 12px;">
                 <p class="sub-heading" style="font-size: 15px">
                   New secondary applicant
                 </p>
@@ -584,7 +584,7 @@
                 + Add Other Contact
               </button>
 
-              <mat-card appearance="outlined" *ngIf="showOtherContactForm">
+              <mat-card appearance="outlined" *ngIf="showOtherContactForm" style="padding: 12px;">
                 <p class="sub-heading" style="font-size: 15px">
                   {{otherContactText}}
                 </p>
