--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -35,7 +35,7 @@
                   [readOnly]="isReadOnly"
                 ></app-bc-address>
               </div>
-            </mat-radio-group><br/><br/>
+            </mat-radio-group>
           </div>
         </div>
 
@@ -52,7 +52,7 @@
               <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
             </mat-radio-group>
           </div>
-        </div><br/><br/>
+        </div>
         
         <div class="row" *ngIf="isHomeowner === true || isResidentialTenant === true">
           <div class="col-md-12 bottomspace">
@@ -67,7 +67,6 @@
               <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
             </mat-radio-group>
             <div *ngIf="damagedPropertyAddressForm.get('occupyAsPrimaryResidence').value != 'false'">
-              <br/><br/>
             </div>
             <div class="row radio-extra-label" *ngIf="damagedPropertyAddressForm.get('occupyAsPrimaryResidence').value == 'false'">
               You must have occupied the property as your principal residence at the time of te event to be eligible for DFA. <br/><br/>
@@ -103,7 +102,7 @@
               required
               aria-label="Select an option">
               <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group><br/><br/>
+            </mat-radio-group>
           </div>
         </div>
 
@@ -118,7 +117,7 @@
               required
               aria-label="Select an option">
               <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group><br/><br/>
+            </mat-radio-group>
           </div>
         </div>
 
@@ -133,7 +132,7 @@
               required
               aria-label="Select an option">
               <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group><br/><br/>
+            </mat-radio-group>
           </div>
         </div>
 
@@ -148,7 +147,7 @@
               required
               aria-label="Select an option">
               <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group><br/><br/>
+            </mat-radio-group>
           </div>
         </div>
 
@@ -163,7 +162,7 @@
               required
               aria-label="Select an option">
               <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group><br/><br/>
+            </mat-radio-group>
           </div>
         </div>
 
@@ -178,7 +177,7 @@
               required
               aria-label="Select an option">
               <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group><br/><br/>
+            </mat-radio-group>
           </div>
         </div>
 
@@ -193,7 +192,7 @@
               required
               aria-label="Select an option">
               <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group><br/><br/>
+            </mat-radio-group>
           </div>
         </div>
 
@@ -208,7 +207,7 @@
               required
               aria-label="Select an option">
               <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group><br/><br/>
+            </mat-radio-group>
           </div>
         </div>
 
@@ -246,7 +245,7 @@
                 {{accountPlaceHolderLabel + ' Legal Name is required'}}</mat-error
               >
             </mat-form-field>
-            <br/><br/>
+            
           </div>
         </div>
 
@@ -296,12 +295,12 @@
                 Maximum length is 100 characters</mat-error
               >
             </mat-form-field>
-            <br/><br/><br/>
+            
           </div>
         </div>
 
         <div *ngIf="damagedPropertyAddressForm.get('onAFirstNationsReserve').value != 'true'">
-          <br/><br/>
+          
         </div>
 
         <div class="row" *ngIf="isHomeowner === true || isResidentialTenant === true">
@@ -315,7 +314,7 @@
               class="primary-radio-group horizontal-radio-group"
               aria-label="Select an option">
               <mat-radio-button value=true>Yes</mat-radio-button>&nbsp;&nbsp;<mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group><br/><br/>
+            </mat-radio-group>
           </div>
         </div>
 
