--- a/dfa/src/UI/embc-dfa/src/styles/styles.scss
+++ b/dfa/src/UI/embc-dfa/src/styles/styles.scss
@@ -181,7 +181,7 @@ footer nav {
   @extend .button-style;
   border: 1px solid #b5b5b5;
   color: #606060;
-  background-color: #ffffff;
+  background-color: #e5e5e5;
 
   --mdc-outlined-button-outline-color: #b5b5b5;
 }
@@ -319,6 +319,10 @@ mat-card {
 /* TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version. */
 .mat-mdc-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
   border-color: #169bd5 !important;
+}
+
+.mat-mdc-radio-button .mdc-radio{
+  padding: 0 !important;
 }
 
 .mat-mdc-radio-button.mat-accent .mat-radio-inner-circle,
