EMBCDFA # 1274 - Fixed the DFA UI issues - Fixed the issue with stepper componet not showing the full titles - Fixed the buttons on the cleanup Log modal

--- a/dfa/src/UI/embc-dfa/src/styles/styles.scss
+++ b/dfa/src/UI/embc-dfa/src/styles/styles.scss
@@ -90,6 +90,12 @@ footer nav {
   font-weight: normal !important;
 }
 
+.mat-step-text-label {
+  text-overflow: inherit;
+  width: 96px;
+  text-wrap: wrap;
+}
+
 .mat-stepper-horizontal-line {
   border-top-width: 2px !important;
 }
