--- a/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-cleanuplog-delete-dialog/dfa-cleanuplog-delete.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-cleanuplog-delete-dialog/dfa-cleanuplog-delete.component.html
@@ -4,7 +4,7 @@
   <div class="col-md-12" [innerHTML]="content"></div>
 </mat-dialog-content>
 
-<mat-dialog-actions style="display: flex; gap:12px;">
+<mat-dialog-actions>
   <div class="col-md-6">
     <button class="button-s button-width" mat-button (click)="cancel()">
      No, don't delete
