EMBCDFA # 1274 - Fixed the DFA UI issues - Added spacing to the damaged property page - Fixed the check box padding issue - Fixed the padding on new clean up log modal

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/clean-up-log/clean-up-log.component.html
@@ -212,7 +212,7 @@
                       >
                     </mat-form-field>
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-4" style="padding-top: 10px;">
                     <mat-form-field appearance="outline">
                       <mat-label>Description</mat-label>
                       <input formControlName="description" matInput placeholder="Description" required maxlength="200" />
