--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -39,7 +39,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="padding-top: 24px;">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Excluding luxury/non-essential items and landscaping, do your losses total more than $1,000?<span style="color:red" >*</span>
@@ -54,7 +54,7 @@
           </div>
         </div>
         
-        <div class="row" *ngIf="isHomeowner === true || isResidentialTenant === true">
+        <div class="row" style="padding-top: 24px;" *ngIf="isHomeowner === true || isResidentialTenant === true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Did you occupy the damaged property as your principal residence at the time of the event?<span style="color:red" >*</span>
@@ -75,7 +75,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isSmallBusinessOwner == true">
+        <div class="row" style="padding-top: 24px;" *ngIf="isSmallBusinessOwner == true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Is your business managed by all owners on a day to day basis?<span style="color:red" >*</span>
@@ -90,7 +90,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isSmallBusinessOwner == true">
+        <div class="row" style="padding-top: 24px;" *ngIf="isSmallBusinessOwner == true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Are the gross revenues of the business more than $10,000 but less than $2
@@ -106,7 +106,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isSmallBusinessOwner == true">
+        <div class="row" style="padding-top: 24px;" *ngIf="isSmallBusinessOwner == true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Does the business employ less than 50 employees at any one time?<span style="color:red" >*</span>
@@ -121,7 +121,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isFarmOwner == true">
+        <div class="row" style="padding-top: 24px;" *ngIf="isFarmOwner == true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Is the farm operation identified in the current assessment of the British Columbia Assessment Authority as a developing or established agricultural operation?<span style="color:red" >*</span>
@@ -136,7 +136,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isFarmOwner == true">
+        <div class="row" style="padding-top: 24px;" *ngIf="isFarmOwner == true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Is the farm operation owned and operated by a person(s) who full-time employment is as a farmer?<span style="color:red" >*</span>
@@ -151,7 +151,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isFarmOwner == true">
+        <div class="row" style="padding-top: 24px;" *ngIf="isFarmOwner == true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Is the farm operation the means by which the owner(s) derives the majority of that person’s income?<span style="color:red" >*</span>
@@ -166,7 +166,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isCharitableOrganization == true">
+        <div class="row" style="padding-top: 24px;" *ngIf="isCharitableOrganization == true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Does the charitable/non-profit organization provide a benefit or service to the community?<span style="color:red" >*</span>
@@ -181,7 +181,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isCharitableOrganization == true">
+        <div class="row" style="padding-top: 24px;" *ngIf="isCharitableOrganization == true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Has the charitable/non-profit organization been in existence for at least 12 months?<span style="color:red" >*</span>
@@ -196,7 +196,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isCharitableOrganization == true">
+        <div class="row" style="padding-top: 24px;" *ngIf="isCharitableOrganization == true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Is the charitable/non-profit organization registered under the BC <i>Societies Act</i>?<span style="color:red" >*</span>
@@ -211,7 +211,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isSmallBusinessOwner === true || isFarmOwner === true || isCharitableOrganization === true">
+        <div class="row" style="padding-top: 24px;" *ngIf="isSmallBusinessOwner === true || isFarmOwner === true || isCharitableOrganization === true">
           <div class="col-md-6 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Provide the {{ accountLegalNameLabel }} legal name.<span style="color:red" >*</span>
@@ -249,7 +249,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="padding-top: 24px;">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Is this address on a First Nations reserve?<span style="color:red" >*</span>
@@ -265,7 +265,7 @@
         </div>
 
         <!-- TODO: drop down list from ERA -->
-        <div class="row" *ngIf="damagedPropertyAddressForm.get('onAFirstNationsReserve').value == 'true'">
+        <div class="row" style="padding-top: 24px;" *ngIf="damagedPropertyAddressForm.get('onAFirstNationsReserve').value == 'true'">
           <div class="col-md-6 bottomspace">
             <mat-form-field appearance="outline">
               <mat-label>Name of First Nations Reserve</mat-label>
@@ -303,7 +303,7 @@
           
         </div>
 
-        <div class="row" *ngIf="isHomeowner === true || isResidentialTenant === true">
+        <div class="row" style="padding-top: 24px;" *ngIf="isHomeowner === true || isResidentialTenant === true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Is your home a manufactured home?
@@ -318,7 +318,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isHomeowner">
+        <div class="row" style="padding-top: 24px;" *ngIf="isHomeowner">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               As the Home Owner, are you eligible for a BC Home Owner Grant for this property?<span style="color:red" >*</span>
@@ -333,7 +333,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isResidentialTenant">
+        <div class="row" style="padding-top: 24px;" *ngIf="isResidentialTenant">
           <p class="sub-heading" style="font-size: 15px">
            Provide at least one registered building owner and/or landlord name and phone number.<span style="color:red" >*</span>
           </p>
@@ -452,7 +452,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isResidentialTenant">
+        <div class="row" style="padding-top: 24px;" *ngIf="isResidentialTenant">
           <p class="sub-heading" style="font-size: 15px">
            You may also provide a second registered building owner and/or landlord name and phone number, if applicable.
           </p>
