Fixed the issue with radio buttons on the pre screening

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
@@ -289,6 +289,7 @@
               <div *ngFor="let option of radioInsuranceOptions | keyvalue: originalOrder">
                 <mat-radio-button
                   class="primary-radio-button row"
+                  style="margin: 5px;"
                   [value]="option.key"
                 >
                   {{ option.value }}
